Fixed layout issues when in mobile mode

--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -25,3 +25,22 @@
     padding: 5px;
     grid-gap: 15px;
 }
+
+@media only screen and (max-width: 650px) {
+
+    .order-container {
+        width: 100vw;
+        margin: 0;
+        grid-gap: 15px;
+    }
+
+    .order-details-container {
+        grid-template-columns: 115px auto;
+    }
+
+    .orderitems-container {
+        grid-gap: 5px;
+        
+    }
+
+ }
