--- a/src/components/OrdersList/OrdersList.css
+++ b/src/components/OrdersList/OrdersList.css
@@ -12,3 +12,12 @@
     padding: 30px;
     text-align: center;
 }
+
+@media only screen and (max-width: 650px) {
+
+    .orderslist-container {
+        width: 100vw;
+        margin: 0;
+    }
+
+ }
